[gd_scene load_steps=3 format=3 uid="uid://c3ani0qdlalp6"]

[ext_resource type="Script" path="res://scripts/ui/level_complete.gd" id="1_rwlb2"]
[ext_resource type="Theme" uid="uid://bb6jvd7apfd7k" path="res://assets/Theme_test.tres" id="1_wmqxd"]

[node name="LevelComplete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwlb2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -199.0
offset_right = 232.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_wmqxd")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title_text" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wmqxd")
text = "Level Completed !"

[node name="Stats_text" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_wmqxd")
text = "Time:"
horizontal_alignment = 1

[node name="NextLevel_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Next Level"

[node name="Menu_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="Panel/VBoxContainer/NextLevel_button" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Menu_button" to="." method="_on_menu_button_pressed"]
